# unmonitorr

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
src/: config.py  log.py  main.py  server.py  types_.py  utils.py
src/arrs/: __init__.py  radarr.py  sonarr.py
src/static/: index.html  style.css
src/static/js/: toast.js  validate.js
src/types_/: __init__.py  episode.py  radarr.py  webhook.py
src/unmonitorr/: config.py  log.py  server.py
src/unmonitorr/arrs/: __init__.py  arrbase.py  radarr.py  sonarr.py
src/unmonitorr/config/: __init__.py  config.py
src/unmonitorr/static/: index.html  style.css
src/unmonitorr/static/js/: toast.js  validate.js
src/unmonitorr/types_/: base.py  episode.py  radarr.py  sonarr.py  webhook.py
tests/: test_api_models.py  test_webhook_payloads.py
